k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: screen-share
  labels:
    app: screen-share
spec:
  type: ClusterIP
  selector:
    app: screen-share
  ports:
    - name: http
      port: 80
      targetPort: 30003
      nodePort: 30003
