k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: screen-share
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  rules:
    - host: ss.jake-purton.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: screen-share
                port:
                  number: 80
